Fix sliders on firefox

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ input[type="range"] {
     -webkit-appearance: none;
     width: 100%;
     margin: 4.55px 0;
+    background-color: transparent;
   }
   input[type="range"]:focus {
     outline: none;
